--- a/src/page/Main/Map.css
+++ b/src/page/Main/Map.css
@@ -76,7 +76,7 @@
   width: 100%;
   height: 100%;
   color: white;
-  opacity: 0.8;
+  opacity: 0.9;
 }
 
 .window__end {
@@ -182,4 +182,20 @@
 
 .mapboxgl-ctrl-top-right{
   top : 70px
+}
+.MuiTableContainer-root::-webkit-scrollbar {
+  width: 12px; /* Width of the scrollbar */
+}
+
+.MuiTableContainer-root::-webkit-scrollbar-track {
+  background-color: black; /* Color of the track (the area behind the scrollbar) */
+}
+
+.MuiTableContainer-root::-webkit-scrollbar-thumb {
+  background-color: #888; /* Color of the scrollbar thumb */
+  border-radius: 6px; /* Rounded corners of the scrollbar thumb */
+}
+
+.MuiTableContainer-root::-webkit-scrollbar-thumb:hover {
+  background-color: #555; /* Color of the scrollbar thumb on hover */
 }
